Rivescript asking random movies

--- a/Chatbot/resources/app.properties
+++ b/Chatbot/resources/app.properties
@@ -1,9 +1,10 @@
 #Chatbot Properties
 db_host = db.sanderkastelein.nl
 db_port = 3306
-db_database = NickyBotUtf8
+db_database = NickyBotUtf82
 db_username = riley
 db_password = jayden
 yt_apiKey = AIzaSyCtpI8KqxHAUexIJ1iGXcVa2X8-x37beg0
-tg_apiKey = 504474641:AAHRSD9huFwZApje8nJBzK_tNIC4ZEg-tqs
+#tg_apiKey = 504474641:AAHRSD9huFwZApje8nJBzK_tNIC4ZEg-tqs
+tg_apiKey = 529764217:AAFSCEf8YkTxQPOjnx4_PjQjarmJMdqUOzw
 
